--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -1,4 +1,4 @@
-IDI_ICON1 ICON DISCARDABLE "icons/linkcoin.ico"
+IDI_ICON1 ICON DISCARDABLE "icons/blinecoin.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
 #include "../../clientversion.h" // holds the needed client version information
@@ -18,14 +18,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "linkcoin"
-            VALUE "FileDescription",    "linkcoin-Qt (OSS GUI client for linkcoin)"
+            VALUE "CompanyName",        "blinecoin"
+            VALUE "FileDescription",    "blinecoin-Qt (OSS GUI client for blinecoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "linkcoin-qt"
-            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The linkcoin developers"
+            VALUE "InternalName",       "blinecoin-qt"
+            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The blinecoin developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "linkcoin-qt.exe"
-            VALUE "ProductName",        "linkcoin-Qt"
+            VALUE "OriginalFilename",   "blinecoin-qt.exe"
+            VALUE "ProductName",        "blinecoin-Qt"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
